# pluto_payments_hardware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
components/project_config/: i2c_config.h  project_config.h
main/: CMakeLists.txt  main.c
main/include/: error_checks.h  http_implementation.h  https_implementation.h  keypad_implementation.h  lcd_render.h  pluto_events.h  pluto_system.h  rc522_implementation.h  request_formater.h  security_measures.h  time_sync.h  wifi_implementation.h
main/src/: http_implementation.c  https_implementation.c  keypad_implementation.c  lcd_render.c  pluto_system.c  rc522_implementation.c  request_formater.c  security_measures.c  time_sync.c  wifi_implementation.c
